src/liquid/components/ld-stepper/ld-step/ld-step.css
/* ... */
.ld-step__focusable-element {
  align-items: center;
  background: transparent;
  border: 0;
  color: var(--ld-step-col);
  display: flex;
  flex-direction: column;
  font-family: var(--ld-font-body);
  font-size: var(--ld-step-label-font-size);
  font-weight: 700;
  line-height: 140%;
  margin: var(--ld-step-text-margin) 0 0; /* Safari reset */
  padding: 0;
  text-align: center;
  text-decoration: none;

  .ld-step:not(.ld-step--current) &:not([aria-disabled='true']) {
    cursor: pointer;

    &:focus {
      --ld-step-brand-dot-opacity: var(--ld-step-brand-dot-opacity-focus);
      --ld-step-dot-col: var(--ld-step-dot-col-focus);

      &:where(:not(:focus-visible)) {
        --ld-step-brand-dot-opacity: var(--ld-step-brand-dot-opacity-default);
        --ld-step-dot-col: var(--ld-step-dot-col-default);
      }
    }

    @media (hover: hover) {
      &:hover {
        --ld-step-brand-dot-opacity: var(--ld-step-brand-dot-opacity-hover);
        --ld-step-dot-col: var(--ld-step-dot-col-hover);
      }
    }

    &:active {
      --ld-step-brand-dot-opacity: var(--ld-step-brand-dot-opacity-active);
      --ld-step-dot-col: var(--ld-step-dot-col-active);
    }
  }

  /* Usually the .ld-icon class should already inherit its color from `--ld-step-dot-col`.
     But due to a bug (assumably) it inherits the same color than the element it inherits
     the variable assignment from, instead of the color for `--ld-step-dot-col` set a few
     lines above this comment. Thus the color needs to be overwritten explicitly. */
  .ld-step--optional:not(.ld-step--current) &:not([aria-disabled='true']) {
    &:focus {
      + .ld-icon {
        --ld-step-brand-dot-opacity: var(--ld-step-brand-dot-opacity-focus);
        color: var(--ld-step-dot-col-focus);
      }

      /* stylelint-disable-next-line csstools/use-nesting */
      &:where(:not(:focus-visible)) + .ld-icon {
        --ld-step-brand-dot-opacity: var(--ld-step-brand-dot-opacity-default);
        color: var(--ld-step-dot-col-default);
      }
    }

    @media (hover: hover) {
      &:hover + .ld-icon {
        --ld-step-brand-dot-opacity: var(--ld-step-brand-dot-opacity-hover);
        color: var(--ld-step-dot-col-hover);
      }
    }

    &:active + .ld-icon {
      --ld-step-brand-dot-opacity: var(--ld-step-brand-dot-opacity-active);
      color: var(--ld-step-dot-col-active);
    }
  }

  &::before {
    @mixin ld-step-dot;
    background: var(--ld-step-dot-col);
    z-index: 1;
  }
}

:host(:not(:first-of-type)) .ld-step,
.ld-step:not(:first-of-type) {
  &::before {
    content: '';
    background: var(--ld-step-line-start-col);
    height: var(--ld-step-line-thickness);
    left: calc(var(--ld-stepper-gap) / -2);
    position: absolute;
    right: calc(50% + var(--ld-step-dot-size) / 2 - var(--ld-sp-1));
    top: calc(var(--ld-step-dot-size-with-icon) / 2);
    transform: translateY(-50%);
  }

  &.ld-step--vertical::before {
    bottom: calc(100% - var(--ld-step-dot-offset) - var(--ld-sp-1));
    height: auto;
    left: calc(var(--ld-step-dot-size-with-icon) / 2);
    right: auto;
    top: calc(var(--ld-stepper-gap) / -2);
    transform: translatex(-50%);
    width: var(--ld-step-line-thickness);
  }
}

:host(:not(:last-of-type)) .ld-step,
.ld-step:not(:last-of-type) {
  &::after {
    content: '';
    background: var(--ld-step-line-end-col);
    height: var(--ld-step-line-thickness);
    left: calc(50% + var(--ld-step-dot-size) / 2 - var(--ld-sp-1));
    position: absolute;
    right: calc(var(--ld-stepper-gap) / -2);
    top: calc(var(--ld-step-dot-size-with-icon) / 2);
    transform: translateY(-50%);
    z-index: -1;
  }

  &.ld-step--vertical::after {
    bottom: calc(var(--ld-stepper-gap) / -2);
    height: auto;
    left: calc(var(--ld-step-dot-size-with-icon) / 2);
    right: auto;
    top: calc(
      var(--ld-step-dot-size) + var(--ld-step-dot-offset) - var(--ld-sp-1)
    );
    transform: translatex(-50%);
    width: var(--ld-step-line-thickness);
  }
}

.ld-step__description {
  color: var(--ld-step-description-col);
  font-family: var(--ld-font-body);
  font-size: var(--ld-step-description-font-size);
  line-height: 140%;
  margin-left: var(--ld-step-text-margin);
}

